force-app/main/default/objects/Onboarding__c/fields/Address_Display__c.field-meta.xml
<CustomField>
    <fullName>Address_Display__c</fullName>
    <label>Address</label>
    <formula>Property_Asset__r.Property__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>