force-app/main/default/objects/Onboarding__c/fields/Completion_Pct__c.field-meta.xml
<CustomField>
    <fullName>Completion_Pct__c</fullName>
    <label>Completion %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>