force-app/main/default/objects/Onboarding__c/fields/Days_To_Onboard__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Onboard__c</fullName>
    <label>Days To Onboard</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>