force-app/main/default/objects/Onboarding__c/fields/Oldest_Open_Days__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Open_Days__c</fullName>
    <label>Oldest Open (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>