force-app/main/default/objects/Onboarding__c/fields/Onboarding_Lead__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Lead__c</fullName>
    <label>Onboarding Lead</label>
    <length>120</length>
    <type>Text</type>
</CustomField>