force-app/main/default/objects/Onboarding__c/fields/Past_Target__c.field-meta.xml
<CustomField>
    <fullName>Past_Target__c</fullName>
    <label>Past Target</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>