force-app/main/default/objects/Onboarding__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <formula>IF(ISBLANK(Property_Asset__c), Name, Property_Asset__r.Property_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>