force-app/main/default/objects/Onboarding__c/fields/Property_Type_Display__c.field-meta.xml
<CustomField>
    <fullName>Property_Type_Display__c</fullName>
    <formula>TEXT(Property_Asset__r.Property_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>