force-app/main/default/objects/Onboarding__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Set up</fullName>
                <default>true</default>
                <label>Property Set up</label>
            </value>
            <value>
                <fullName>Unit &amp; Tenant Setup</fullName>
            </value>
            <value>
                <fullName>Vendor &amp; Expense Management</fullName>
            </value>
            <value>
                <fullName>NNN Reconciliation &amp; Billing Setup</fullName>
            </value>
            <value>
                <fullName>Tenant Communication &amp; Transition</fullName>
            </value>
            <value>
                <fullName>Performance Tracking</fullName>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
            <value>
                <fullName>Onboarding Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>