force-app/main/default/objects/Onboarding__c/fields/Tasks_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Blocked__c</fullName>
    <label>Tasks Blocked</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>