force-app/main/default/objects/Onboarding__c/fields/Tasks_Blocked_Now__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Blocked_Now__c</fullName>
    <label>Blocked Tasks (Alert)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>