force-app/main/default/objects/Onboarding__c/fields/Tasks_Display__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Display__c</fullName>
    <label>Tasks</label>
    <formula>TEXT(Tasks_Complete__c) &amp; " / " &amp; TEXT(Tasks_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>