force-app/main/default/objects/Onboarding__c/fields/Tasks_Due_7d__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Due_7d__c</fullName>
    <label>Due Next 7 Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>