force-app/main/default/objects/Onboarding__c/fields/Tasks_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Tasks_In_Progress__c</fullName>
    <label>Tasks In Progress</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>