force-app/main/default/objects/Onboarding__c/fields/Tasks_NA__c.field-meta.xml
<CustomField>
    <fullName>Tasks_NA__c</fullName>
    <label>Tasks N/A</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>