force-app/main/default/objects/Onboarding__c/fields/Tasks_Not_Started__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Not_Started__c</fullName>
    <label>Tasks Not Started</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>