force-app/main/default/objects/Onboarding__c/fields/Tasks_Open__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Open__c</fullName>
    <label>Open Tasks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>