force-app/main/default/objects/Onboarding__c/fields/Tasks_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Overdue__c</fullName>
    <label>Overdue Tasks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>