force-app/main/default/objects/Onboarding__c/fields/Tasks_Stalled__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Stalled__c</fullName>
    <label>Stalled Over 7 Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>